--- a/index.haml
+++ b/index.haml
@@ -10,9 +10,15 @@
 			/ this is where we put the header bar
 			Grab 'em
 		%section#search_box
+			%form{:name => 'search_artwork'}
+				%label{:for => 'artist_name'} Artist Name
+				%input{:type => 'text', :id => 'artist_name'}
+				-# %input{:type => 'button', :value => 'Search', :onClick => 'performSearch()'}
+			%a{:href => 'javascript:performSearch()'} Search
 			/ search box here
 		%section#main_body
 			/ search results here
-
+	%footer
 		%script{:src => 'js/jquery-1.11.1.min.js'}
 		%script{:src => 'js/script.js'}
+		%div{:id => 'search_script'}
