--- a/css/style.sass
+++ b/css/style.sass
@@ -20,6 +20,24 @@ header
 	margin: 1em 20em
 	padding: 2em
 	background-color: $kulay-search
+	text-align: center
+
+input[type='text']
+	font-size: 1.1em
+	padding: 0.2em
+	font-weight: 200
+
+#search_button
+	margin-top: 1em
+	padding: 0.5em 4em
+	background-color: $kulay-blue
+	display: inline-block
+	text-transform: uppercase
+	text-decoration: none
+	color: #fff
+
+#search_button:hover
+	background-color: darken($kulay-blue, 10%)
 
 #main_body
 	padding: 0 20em
