--- a/css/style.sass
+++ b/css/style.sass
@@ -3,6 +3,7 @@ $kulay-bg: #ecf0f1
 $kulay-text: #2c3e50
 $kulay-search: #bdc3c7
 $kulay-blue: #3d9ddd
+$kulay-red: #c0392b
 
 html
 	background-color: $kulay-bg
@@ -108,3 +109,9 @@ input[type='text']
 	height: 18px
 	width: 18px
 	border: 1px solid lighten($kulay-blue, 10%)
+
+#no_result
+	text-align: center
+	font-size: 2em
+	font-weight: 200
+	color: $kulay-red
