--- a/css/style.sass
+++ b/css/style.sass
@@ -9,18 +9,18 @@ html
 	background-color: $kulay-bg
 
 header
-	color: $kulay-text
+	color: $kulay-blue
 	font-size: 1.5em
 	font-weight: 200
 	text-align: center
+	text-transform: uppercase
 	background-color: #fff
 	padding: 0.6em
-	border-bottom: 1px $kulay-blue solid
 
 #search_box
-	margin: 1em 20em
+	margin: 0 20em 1em 20em
 	padding: 2em
-	background-color: $kulay-search
+	background-color: lighten($kulay-search, 10%)
 	text-align: center
 
 input[type='text']
@@ -75,10 +75,11 @@ input[type='text']
 .size_buttons
 	display: block
 	float: left
+	text-transform: uppercase
+	font-size: 0.8em
 
 .album_art_button
 	display: inline-block
-	margin: 0.1em
 	background-color: $kulay-blue
 
 .small
@@ -87,9 +88,9 @@ input[type='text']
 	margin-right: 0.3em
 
 .small:hover
-	height: 8px
-	width: 8px
-	border: 1px solid lighten($kulay-blue, 10%)
+	height: 6px
+	width: 6px
+	border: 2px solid darken($kulay-blue, 20%)
 
 .medium
 	height: 15px
@@ -97,18 +98,18 @@ input[type='text']
 	margin-right: 0.3em
 
 .medium:hover
-	height: 13px
-	width: 13px
-	border: 1px solid lighten($kulay-blue, 10%)
+	height: 11px
+	width: 11px
+	border: 2px solid darken($kulay-blue, 20%)
 
 .large
 	height: 20px
 	width: 20px
 
 .large:hover
-	height: 18px
-	width: 18px
-	border: 1px solid lighten($kulay-blue, 10%)
+	height: 16px
+	width: 16px
+	border: 2px solid darken($kulay-blue, 20%)
 
 #no_result
 	text-align: center
