--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,7 @@
-/* Stylesheet here */
 html
 {
     background-color: #ecf0f1;
 }
-
 header
 {
     font-size: 1.5em;
@@ -15,9 +13,8 @@ header
     text-transform: uppercase;
 
     color: #3d9ddd;
-    background-color: white;
+    background-color: #fff;
 }
-
 #search_box
 {
     margin: 0 20em 1em 20em;
@@ -27,7 +24,6 @@ header
 
     background-color: #d9dcde;
 }
-
 input[type='text']
 {
     font-size: 1.1em;
@@ -35,7 +31,6 @@ input[type='text']
 
     padding: .2em;
 }
-
 #search_button
 {
     display: inline-block;
@@ -46,31 +41,27 @@ input[type='text']
     text-decoration: none;
     text-transform: uppercase;
 
-    color: white;
+    color: #fff;
     background-color: #3d9ddd;
 }
-
 #search_button:hover
 {
     background-color: #2284c5;
 }
-
 #main_body
 {
     padding: 0 20em;
 
     background-color: #ecf0f1;
 }
-
 .result_item
 {
     height: 102px;
     margin: .5em 0;
     padding: .5em;
 
-    background-color: white;
+    background-color: #fff;
 }
-
 .album_info
 {
     display: block;
@@ -93,7 +84,6 @@ input[type='text']
     -webkit-margin-before: 0;
     -webkit-margin-after: 0;
 }
-
 .album_art
 {
     float: left;
@@ -103,7 +93,6 @@ input[type='text']
 
     border: 1px solid #bdc3c7;
 }
-
 .size_buttons
 {
     font-size: .8em;
@@ -113,21 +102,18 @@ input[type='text']
 
     text-transform: uppercase;
 }
-
 .album_art_button
 {
     display: inline-block;
 
     background-color: #3d9ddd;
 }
-
 .small
 {
     width: 10px;
     height: 10px;
     margin-right: .3em;
 }
-
 .small:hover
 {
     width: 6px;
@@ -135,14 +121,12 @@ input[type='text']
 
     border: 2px solid #1b6799;
 }
-
 .medium
 {
     width: 15px;
     height: 15px;
     margin-right: .3em;
 }
-
 .medium:hover
 {
     width: 11px;
@@ -150,13 +134,11 @@ input[type='text']
 
     border: 2px solid #1b6799;
 }
-
 .large
 {
     width: 20px;
     height: 20px;
 }
-
 .large:hover
 {
     width: 16px;
@@ -164,7 +146,6 @@ input[type='text']
 
     border: 2px solid #1b6799;
 }
-
 #no_result
 {
     font-size: 2em;
