--- a/css/style.css
+++ b/css/style.css
@@ -2,28 +2,40 @@ html
 {
     background-color: #ecf0f1;
 }
+
 header
 {
     font-size: 1.5em;
     font-weight: 200;
 
+    position: fixed;
+    top: 0;
+
+    display: block;
+
+    width: 98%;
     padding: .6em;
 
     text-align: center;
     text-transform: uppercase;
 
     color: #3d9ddd;
-    background-color: #fff;
+    background-color: white;
+    -webkit-box-shadow: 0 -3px 13px 0 rgba(50, 50, 50, .3);
+       -moz-box-shadow: 0 -3px 13px 0 rgba(50, 50, 50, .3);
+            box-shadow: 0 -3px 13px 0 rgba(50, 50, 50, .3);
 }
+
 #search_box
 {
-    margin: 0 20em 1em 20em;
-    padding: 2em;
+    margin: 3.5em auto 0 auto;
+    padding: 4em 0;
 
     text-align: center;
 
     background-color: #d9dcde;
 }
+
 input[type='text']
 {
     font-size: 1.1em;
@@ -31,6 +43,7 @@ input[type='text']
 
     padding: .2em;
 }
+
 #search_button
 {
     display: inline-block;
@@ -41,27 +54,36 @@ input[type='text']
     text-decoration: none;
     text-transform: uppercase;
 
-    color: #fff;
+    color: white;
     background-color: #3d9ddd;
 }
+
 #search_button:hover
 {
     background-color: #2284c5;
 }
+
 #main_body
 {
-    padding: 0 20em;
+    width: 61.5em;
+    margin: 0 auto;
 
     background-color: #ecf0f1;
 }
+
 .result_item
 {
+    display: inline-block;
+    float: left;
+
+    width: 19em;
     height: 102px;
-    margin: .5em 0;
+    margin: .25em;
     padding: .5em;
 
-    background-color: #fff;
+    background-color: white;
 }
+
 .album_info
 {
     display: block;
@@ -84,6 +106,7 @@ input[type='text']
     -webkit-margin-before: 0;
     -webkit-margin-after: 0;
 }
+
 .album_art
 {
     float: left;
@@ -93,6 +116,7 @@ input[type='text']
 
     border: 1px solid #bdc3c7;
 }
+
 .size_buttons
 {
     font-size: .8em;
@@ -102,18 +126,21 @@ input[type='text']
 
     text-transform: uppercase;
 }
+
 .album_art_button
 {
     display: inline-block;
 
     background-color: #3d9ddd;
 }
+
 .small
 {
     width: 10px;
     height: 10px;
     margin-right: .3em;
 }
+
 .small:hover
 {
     width: 6px;
@@ -121,12 +148,14 @@ input[type='text']
 
     border: 2px solid #1b6799;
 }
+
 .medium
 {
     width: 15px;
     height: 15px;
     margin-right: .3em;
 }
+
 .medium:hover
 {
     width: 11px;
@@ -134,11 +163,13 @@ input[type='text']
 
     border: 2px solid #1b6799;
 }
+
 .large
 {
     width: 20px;
     height: 20px;
 }
+
 .large:hover
 {
     width: 16px;
@@ -146,6 +177,7 @@ input[type='text']
 
     border: 2px solid #1b6799;
 }
+
 #no_result
 {
     font-size: 2em;
