--- a/css/style.sass
+++ b/css/style.sass
@@ -1,4 +1,3 @@
-/* Stylesheet here */
 $kulay-bg: #ecf0f1
 $kulay-text: #2c3e50
 $kulay-search: #bdc3c7
@@ -16,10 +15,17 @@ header
 	text-transform: uppercase
 	background-color: #fff
 	padding: 0.6em
+	display: block
+	position: fixed
+	top: 0
+	width: 98%
+	-webkit-box-shadow: 0px -3px 13px 0px rgba(50, 50, 50, 0.3)
+	-moz-box-shadow: 0px -3px 13px 0px rgba(50, 50, 50, 0.3)
+	box-shadow: 0px -3px 13px 0px rgba(50, 50, 50, 0.3)
 
 #search_box
-	margin: 0 20em 1em 20em
-	padding: 2em
+	margin: 3.5em auto 0 auto
+	padding: 4em 0
 	background-color: lighten($kulay-search, 10%)
 	text-align: center
 
@@ -41,14 +47,18 @@ input[type='text']
 	background-color: darken($kulay-blue, 10%)
 
 #main_body
-	padding: 0 20em
+	width: 61.5em
+	margin: 0 auto
 	background-color: $kulay-bg
 
 .result_item
 	padding: 0.5em
-	margin: 0.5em 0
+	margin: 0.25em
 	height: 102px
+	width: 19em
 	background-color: #fff
+	display: inline-block
+	float: left
 
 .album_info
 	display: block
