--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ header
 
 #search_box
 {
-    margin: 3.5em auto 0 auto;
+    margin: 3.5em auto .25em auto;
     padding: 4em 0;
 
     text-align: center;
@@ -66,7 +66,7 @@ input[type='text']
 #main_body
 {
     width: 61.5em;
-    margin: 0 auto;
+    margin: 0 auto .25em auto;
 
     background-color: #ecf0f1;
 }
@@ -91,7 +91,7 @@ input[type='text']
 }
 .album_info h3
 {
-    font-size: 1.2em;
+    font-size: .8em;
     font-weight: 200;
 
     display: inline-block;
@@ -101,7 +101,7 @@ input[type='text']
 }
 .album_info h2
 {
-    font-size: 1.4em;
+    font-size: 1em;
     font-weight: 400;
 
     -webkit-margin-before: 0;
@@ -112,6 +112,7 @@ input[type='text']
 {
     float: left;
 
+    width: 100px;
     height: 100px;
     margin-right: .5em;
 
