--- a/css/style.sass
+++ b/css/style.sass
@@ -24,7 +24,7 @@ header
 	box-shadow: 0px -3px 13px 0px rgba(50, 50, 50, 0.3)
 
 #search_box
-	margin: 3.5em auto 0 auto
+	margin: 3.5em auto 0.25em auto
 	padding: 4em 0
 	background-color: lighten($kulay-search, 10%)
 	text-align: center
@@ -48,7 +48,7 @@ input[type='text']
 
 #main_body
 	width: 61.5em
-	margin: 0 auto
+	margin: 0 auto 0.25em auto
 	background-color: $kulay-bg
 
 .result_item
@@ -65,14 +65,14 @@ input[type='text']
 	display: block
 
 	h3
-		font-size: 1.2em
+		font-size: 0.8em
 		font-weight: 200
 		display: inline-block
 		-webkit-margin-before: 0
 		-webkit-margin-after: 0
 
 	h2
-		font-size: 1.4em
+		font-size: 1em
 		font-weight: 400
 		-webkit-margin-before: 0
 		-webkit-margin-after: 0
@@ -80,6 +80,7 @@ input[type='text']
 .album_art
 	float: left
 	height: 100px
+	width: 100px
 	border: 1px solid $kulay-search
 	margin-right: 0.5em
 
