--- a/css/style.sass
+++ b/css/style.sass
@@ -22,6 +22,7 @@ header
 	-webkit-box-shadow: 0px -3px 13px 0px rgba(50, 50, 50, 0.3)
 	-moz-box-shadow: 0px -3px 13px 0px rgba(50, 50, 50, 0.3)
 	box-shadow: 0px -3px 13px 0px rgba(50, 50, 50, 0.3)
+	opacity: 0.97
 
 #search_box
 	margin: 3.5em auto 0.25em auto
@@ -97,7 +98,6 @@ input[type='text']
 .small
 	height: 10px
 	width: 10px
-	margin-right: 0.3em
 
 .small:hover
 	height: 6px
@@ -107,7 +107,6 @@ input[type='text']
 .medium
 	height: 15px
 	width: 15px
-	margin-right: 0.3em
 
 .medium:hover
 	height: 11px
@@ -122,6 +121,16 @@ input[type='text']
 	height: 16px
 	width: 16px
 	border: 2px solid darken($kulay-blue, 20%)
+
+.orig
+	height: 20px
+	width: 20px
+	background-color: $kulay-red
+
+.orig:hover
+	height: 16px
+	width: 16px
+	border: 2px solid darken($kulay-red, 20%)
 
 #no_result
 	text-align: center
