--- a/index.haml
+++ b/index.haml
@@ -26,14 +26,15 @@
 						{{ collectionName }}
 					%h3
 						{{ artistName }}
-				.size_buttons
-					Album art:
-					%a.album_art_button.small{href: '{{ artworkURLClean }}400x400-75.jpg', target: 'new'}
-					%a.album_art_button.medium{href: '{{ artworkURLClean }}600x600-75.jpg', target: 'new'}
-					%a.album_art_button.large{href: '{{ artworkURLClean }}1200x1200-75.jpg', target: 'new'}
-					{{#originalArt}}
-					%a.album_art_button.orig{href: '{{ artworkURLClean }}jpg', target: 'new'}
-					{{/originalArt}}
+				.size_buttons_container
+					.size_buttons
+						Album art size:
+						%a.album_art_button.small{href: '{{ artworkURLClean }}400x400-75.jpg', target: 'new'}
+						%a.album_art_button.medium{href: '{{ artworkURLClean }}600x600-75.jpg', target: 'new'}
+						%a.album_art_button.large{href: '{{ artworkURLClean }}1200x1200-75.jpg', target: 'new'}
+						{{#originalArt}}
+						%a.album_art_button.orig{href: '{{ artworkURLClean }}jpg', target: 'new'}
+						{{/originalArt}}
 	%footer
 		%script{:src => 'js/bundle.js'}
 		%div{:id => 'search_script'}
