--- a/css/style-unsorted.css
+++ b/css/style-unsorted.css
@@ -18,6 +18,7 @@ header {
   -moz-box-shadow: 0px -3px 13px 0px rgba(50, 50, 50, 0.3);
   box-shadow: 0px -3px 13px 0px rgba(50, 50, 50, 0.3);
   opacity: 0.97;
+  z-index: 10;
 }
 
 #search_box {
