Minified some CSS and JS files

--- a/css/style-unsorted.css
+++ b/css/style-unsorted.css
@@ -28,10 +28,11 @@ header {
   text-align: center;
 }
 
-input[type='text'] {
+#artist_name {
   font-size: 1.1em;
   padding: 0.2em;
   font-weight: 200;
+  outline: none;
 }
 
 #search_button {
