--- a/css/style.sass
+++ b/css/style.sass
@@ -35,10 +35,11 @@ header
 	background-color: lighten($kulay-search, 10%)
 	text-align: center
 
-input[type='text']
+#artist_name
 	font-size: 1.1em
 	padding: 0.2em
 	font-weight: 200
+	outline: none
 
 #search_button
 	margin-top: 1em
