--- a/index.haml
+++ b/index.haml
@@ -21,7 +21,7 @@
 		%script{:id => 'template', :type => 'x-tmpl-mustache'}
 			.result_item{:id => 'info_{{ itemNo }}'}
 				.album_art
-					%img{:src => '{{ artworkUrl100 }}', :'data-src-retina' => '{{ artworkUrl200}}', :alt => '{{ collectionName }}', :width => '100', :height => '100'}
+					%img{:src => '{{ artworkUrl200 }}', :alt => '{{ collectionName }}', :width => '100', :height => '100'}
 				.album_info
 					%h2
 						{{ collectionName }}
