--- a/index.haml
+++ b/index.haml
@@ -21,15 +21,16 @@
 		%script{:id => 'template', :type => 'x-tmpl-mustache'}
 			.result_item{:id => 'info_{{ itemNo }}'}
 				.album_art
-					%img{:src => '{{ artworkUrl200 }}', :alt => '{{ collectionName }}', :width => '100', :height => '100'}
+					%img{:class => 'artwork_img', :src => '{{ artworkUrl200 }}', :alt => '{{ collectionName }}', :width => '100%', :height => '100%'}
 				.album_info
-					%h2
-						{{ collectionName }}
-					%h3
-						{{ artistName }}
+					.inner_info
+						%h2
+							{{ collectionName }}
+						%h3
+							{{ artistName }}
+				.fade
 				.size_buttons_container
 					.size_buttons
-						Album art size:
 						%a.album_art_button.small{href: '{{ artworkURLClean }}400x400-75.jpg', target: 'new'}
 						%a.album_art_button.medium{href: '{{ artworkURLClean }}600x600-75.jpg', target: 'new'}
 						%a.album_art_button.large{href: '{{ artworkURLClean }}1200x1200-75.jpg', target: 'new'}
