Added Grunt task for minifying bundle.js

--- a/index.haml
+++ b/index.haml
@@ -38,5 +38,5 @@
 						%a.album_art_button.orig{href: '{{ artworkURLClean }}jpg', target: 'new'}
 						{{/originalArt}}
 	%footer
-		%script{:src => 'js/bundle.js'}
+		%script{:src => 'js/bundle.min.js'}
 		%div{:id => 'search_script'}
