Background colour of results reverted to white

--- a/css/style.sass
+++ b/css/style.sass
@@ -63,7 +63,7 @@ header
 	width: 150px
 	height: 230px
 	border-radius: 4px
-	background-color: darken(#fff, 1%)
+	background-color: #fff
 	display: inline-block
 	float: left
 	display: none
