--- a/css/style-unsorted.css
+++ b/css/style-unsorted.css
@@ -60,7 +60,7 @@ header {
   width: 150px;
   height: 230px;
   border-radius: 4px;
-  background-color: #fcfcfc;
+  background-color: white;
   display: inline-block;
   float: left;
   display: none;
