--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ header
     margin: .5em .25em;
 
     border-radius: 4px;
-    background-color: #fcfcfc;
+    background-color: white;
     -webkit-box-shadow: 0 1px 7px 0 rgba(0, 0, 0, .15);
        -moz-box-shadow: 0 1px 7px 0 rgba(0, 0, 0, .15);
             box-shadow: 0 1px 7px 0 rgba(0, 0, 0, .15);
