--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ header
 
 #search_form
 {
-    width: 408px;
+    width: 336px;
     margin: 0 auto;
 }
 
@@ -77,7 +77,7 @@ header
        -moz-box-sizing: border-box;
             box-sizing: border-box;
     height: 41px;
-    padding: .75em 1.5em;
+    padding: .5em;
 
     text-decoration: none;
     text-transform: uppercase;
