--- a/css/style.sass
+++ b/css/style.sass
@@ -36,7 +36,7 @@ header
 	text-align: center
 
 #search_form
-	width: 408px
+	width: 336px
 	margin: 0 auto
 
 #search_term
@@ -65,7 +65,7 @@ header
 	color: #fff
 	height: 41px
 	font-weight: 200
-	padding: 0.75em 1.5em
+	padding: 0.5em
 	border-top-right-radius: 2px
 	border-bottom-right-radius: 2px
 	-webkit-box-sizing: border-box
